--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "youmaynotneedjquery",
+  "name": "you-might-not-need-jquery",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
