--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "webpack -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/datatables.net": "^1.10.16",
     "@types/jquery": "^3.3.29",
+    "datatables.net": "^1.10.19",
     "jquery": "^3.3.1",
     "ts-loader": "^5.3.3",
     "typescript": "^3.3.3333",
