--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   "dependencies": {
     "@types/datatables.net": "^1.10.16",
     "@types/jquery": "^3.3.29",
+    "css-loader": "^2.1.1",
     "datatables.net": "^1.10.19",
+    "datatables.net-dt": "^1.10.19",
+    "file-loader": "^3.0.1",
     "jquery": "^3.3.1",
+    "style-loader": "^0.23.1",
     "ts-loader": "^5.3.3",
     "typescript": "^3.3.3333",
+    "url-loader": "^1.1.2",
     "webpack": "^4.29.6"
   },
   "devDependencies": {
